Add support to ESP32 architecture

--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Library to get geographic position (lat, lon, accuracy) listening surro
 paragraph=This library implements call to Google Maps GeoLocation API to get location from surrounding WiFi networks. It is not needed to know WiFi password of all of them. Internet connection is required.
 category=Other
 url=https://github.com/gmag11/WifiLocation
-architectures=esp8266, samd
+architectures=esp8266, samd, esp32
 
