--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.0.1
 author=Germán Martín
 maintainer=Germán Martín <gmag11@gmail.com>
 sentence=Library to get geographic position (lat, lon, accuracy) listening surrounding WiFi networks (Works with ESP8266 and WiFi101 boards, including MKR1000)
-paragraph=This library implements call to Google Maps GeoLocation API to get location from surrounding WiFi networks. It is not needed to know WiFi password of all of them. Internet connection is required.
+paragraph=This library implements call to Google Maps GeoLocation API to get location from surrounding WiFi networks. It is not needed to know WiFi password of all of them. Internet connection is required. You need an API key from Google Maps. Check https://developers.google.com/maps/documentation/geolocation/intro to learn how to get your own key.
 category=Other
 url=https://github.com/gmag11/WifiLocation
 architectures=esp8266, samd, esp32
