Use actions in master branch only

--- a/.github/workflows/examples_ESP32.yml
+++ b/.github/workflows/examples_ESP32.yml
@@ -1,6 +1,13 @@
 name: Compile examples for ESP32
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+      
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
