--- a/.github/workflows/examples_ESP8266.yml
+++ b/.github/workflows/examples_ESP8266.yml
@@ -1,6 +1,13 @@
 name: Compile examples for ESP8266
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+      
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
