Update for latest platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,10 +38,10 @@ monitor_dtr = 0
 
 [env:esp32]
 extends = esp32_common
-src_filter = -<*> +<googleLocation/>
+build_src_filter = -<*> +<googleLocation/>
 
 
 [env:esp8266]
 extends = esp8266_common
-src_filter = -<*> +<googleLocation/>
+build_src_filter = -<*> +<googleLocation/>
 
