Implement Bing Maps API client for Geocoding

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,11 @@
 name=WifiLocation
-version=1.2.9
+version=1.3.0
 author=Germán Martín
 maintainer=Germán Martín <gmag11@gmail.com>
 sentence=Library to get geographic position (lat, lon, accuracy), without GPS, by listening surrounding WiFi networks (Works with ESP8266 and ESP32 boards)
-paragraph=This library implements call to Google Maps GeoLocation API to get location from surrounding WiFi networks without the need to use a GPS receiver. It is not needed to know WiFi password of all of them. Internet connection is required. You need an API key from Google Maps. Check https://developers.google.com/maps/documentation/geolocation/intro to learn how to get your own key.
+paragraph=This library implements call to Google Maps GeoLocation API to get location from surrounding WiFi networks without the need to use a GPS receiver. It is not needed to know WiFi password of all of them. Internet connection is required. You need an API key from Google Maps. Check https://developers.google.com/maps/documentation/geolocation/intro to learn how to get your own key. After version 1.3.0 it includes getting address from location using Bing Maps API. Check https://www.bingmapsportal.com to get an API key.
 category=Other
 url=https://github.com/gmag11/WifiLocation
 architectures=esp8266, esp32
+depends=ArduinoJson,QuickDebug
 
