--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,14 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps =
+  bblanchon/ArduinoJson
+  gmag11/QuickDebug
+build_flags =
+  -DCORE_DEBUG_LEVEL=3
+  -DCONFIG_ARDUHAL_LOG_COLORS=1
+monitor_filters = time
+
 ;debug_tool = esp-prog
 ;upload_protocol = esp-prog
 ;debug_init_break = tbreak setup
@@ -32,16 +40,36 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_resetmethod = nodemcu
-monitor_filters = time ;, esp8266_exception_decoder
-monitor_rts = 0
-monitor_dtr = 0
+lib_deps =
+  bblanchon/ArduinoJson
+  gmag11/QuickDebug
+build_flags =
+  -DDEBUG_LEVEL=3
+  -DCONFIG_ARDUHAL_LOG_COLORS=1
+monitor_filters = time
 
-[env:esp32]
+[env:esp32-Location]
 extends = esp32_common
 build_src_filter = -<*> +<googleLocation/>
 
+[env:esp32-bingMapsGeo]
+extends = esp32_common
+build_src_filter = -<*> +<BingMapsGeo/>
 
-[env:esp8266]
+[env:esp32-LocationGeo]
+extends = esp32_common
+build_src_filter = -<*> +<LocationAndGeo/>
+
+[env:esp8266-Location]
 extends = esp8266_common
 build_src_filter = -<*> +<googleLocation/>
+
+[env:esp8266-bingMapsGeo]
+extends = esp8266_common
+build_src_filter = -<*> +<BingMapsGeo/>
+
+[env:esp8266-LocationGeo]
+extends = esp8266_common
+build_src_filter = -<*> +<LocationAndGeo/>
+
 
