--- a/.github/workflows/examples_ESP32.yml
+++ b/.github/workflows/examples_ESP32.yml
@@ -17,6 +17,8 @@ jobs:
       matrix:
         example: 
         - "examples/googleLocation/googleLocation.ino"
+        - "examples/BingMapsGeo/BingMapsGeo.ino"
+        - "examples/LocationAndGeo/LocationAndGeo.ino"
 
     steps:
     - uses: actions/checkout@v2
