--- a/.github/workflows/examples_ESP8266.yml
+++ b/.github/workflows/examples_ESP8266.yml
@@ -49,6 +49,10 @@ jobs:
       run: | 
         pio lib -g install \
         https://github.com/gmag11/WifiLocation
+
+    - name: Update all
+      run: | 
+        pio pkg update
         
     - name: Run PlatformIO Examples
       run: pio ci --board=nodemcuv2
